Added new command: rmdir. FileDescriptor class was changed: parentId and directoryName fields was removed. Because of that, all related logic was updated.